--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "html-loader": "^0.4.4",
     "jasmine": "^2.5.2",
     "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
+    "phantomjs": "^2.1.7",
     "typescript": "^2.0.3",
     "webpack": "^2.1.0-beta.25"
   },
