--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "NODE_ENV=production webpack",
-    "build:dev": "webpack"
+    "build:dev": "webpack",
+    "test": "karma start"
   },
   "repository": {
     "type": "git",
@@ -22,8 +23,20 @@
   "homepage": "https://github.com/uxisfirst/angularjsand#readme",
   "devDependencies": {
     "@types/angular": "^1.5.16",
+    "@types/angular-mocks": "^1.5.5",
+    "@types/jasmine": "^2.2.34",
+    "angular-mocks": "^1.5.8",
     "awesome-typescript-loader": "^2.2.4",
     "html-loader": "^0.4.4",
+    "jasmine": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.0",
+    "phantomjs": "^2.1.7",
     "typescript": "^2.0.3",
     "webpack": "^2.1.0-beta.25"
   },
